[gd_scene load_steps=15 format=2]

[ext_resource path="res://target.png" type="Texture" id=1]
[ext_resource path="res://body.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://body-devconf.png" type="Texture" id=4]
[ext_resource path="res://target-devconf.png" type="Texture" id=5]

[sub_resource type="TileSet" id=1]
0/name = "body.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 40, 40 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "target.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "body-devconf.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 40, 40 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 40, 40 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "target-devconf.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1, 0, 39, 40 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 40, 40 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/ShareTechMono-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/ShareTechMono-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 120
outline_size = 3
font_data = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 0 )

[node name="Game" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 3 )

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
format = 1

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.346

[node name="Score" type="Label" parent="."]
margin_left = 570.933
margin_top = 15.416
margin_right = 791.933
margin_bottom = 52.416
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "YOUR SCORE: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_left = 66.933
margin_top = 15.416
margin_right = 287.933
margin_bottom = 52.416
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = -1.16797
margin_top = 184.135
margin_right = 917.832
margin_bottom = 472.135
custom_fonts/font = SubResource( 5 )
text = "GAME OVER
123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AllowMovementTimer" type="Timer" parent="."]
wait_time = 0.158
one_shot = true

[node name="DownButton" type="Button" parent="."]
margin_left = -7.0
margin_top = 443.0
margin_right = 4.0
margin_bottom = 465.0
rect_scale = Vector2( 85.1104, 22.1764 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="Button" parent="."]
margin_left = 927.0
margin_top = 439.0
margin_right = 955.0
margin_bottom = 459.0
rect_rotation = -180.0
rect_scale = Vector2( 33.3904, 22.1764 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="."]
margin_left = 473.319
margin_top = 933.0
margin_right = 501.319
margin_bottom = 954.0
rect_rotation = -90.0
rect_scale = Vector2( 33.3904, 22.1764 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="Button" parent="."]
margin_left = 470.681
margin_top = -2.0
margin_right = 498.681
margin_bottom = 19.0
rect_rotation = -270.0
rect_scale = Vector2( 33.3904, 22.1764 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="timeout" from="StepTimer" to="." method="step"]
[connection signal="timeout" from="NewGameTimer" to="." method="_enable_newgame"]
[connection signal="timeout" from="AllowMovementTimer" to="." method="allowMovement"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
